# chan-fatfs

./: .gitignore  .npmignore  .project  .xcdl.json  .xpack_ignore  CHANGELOG-XPACK.md  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  NOTES.md  README-MAINTAINER-XPACK.md  README.md  module.json  package.json  patches.txt  xpack.json
doc/: 00index_e.html  00index_j.html  css_e.css  css_j.css  updates.txt
doc/en/: appnote.html  chmod.html  close.html  dinit.html  dioctl.html  dread.html  dstat.html  dwrite.html  fattime.html  filename.html  forward.html  getfree.html  lseek.html  mkdir.html  mkfs.html  mount.html  mountdrv.html  open.html  opendir.html  printf.html  rc.html  read.html  readdir.html  rename.html  sdir.html  sfatfs.html  sfile.html  sfileinfo.html  stat.html  sync.html  truncate.html  unlink.html  utime.html  write.html
doc/ja/: appnote.html  chmod.html  close.html  dinit.html  dioctl.html  dread.html  dstat.html  dwrite.html  fattime.html  filename.html  forward.html  getfree.html  getlabel.html  lseek.html  mkdir.html  mkfs.html  mount.html  mountdrv.html  open.html  opendir.html  printf.html  putc.html  puts.html  rc.html  read.html  readdir.html  rename.html  sdir.html  sfatfs.html  sfile.html  sfileinfo.html  stat.html  sync.html  unlink.html  utime.html  write.html
include/chan-fatfs/: README.md  diskio.h  ff.h  integer.h  utils.h
include/cmsis-plus/posix-io/: chan-fatfs-directory.h  chan-fatfs-file-system.h  chan-fatfs-file.h  directory-chan-fatfs.h  file-chan-fatfs.h  file-system-chan-fatfs.h
scripts/: prepare.sh  xpacks-helper.sh
source/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h  ffunicode.c  utils.h
src/: 00readme.txt  diskio.c  diskio.h  ff.c  ff.h  ffconf.h  integer.h  tff.c  tff.h
src/option/: ccsbcs.c
src/posix-io/: chan-fatfs-directory.cpp  chan-fatfs-file-sytem.cpp  chan-fatfs-file.cpp  directory-chan-fatfs.cpp  diskio.cpp  ffsystem.cpp  file-chan-fatfs.cpp  file-sytem-chan-fatfs.cpp  utils.cpp
